# poker-exersice

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  openapi.yaml
backend/app/api/endpoints/: hands.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  hand.py
backend/app/repositories/: __init__.py  hand_repository.py
backend/app/services/: __init__.py  poker_service.py
backend/tests/: __init__.py  test_hands.py
frontend/: .gitignore  Dockerfile  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: ActionControls.tsx  HandHistory.tsx  PlayingField.tsx
frontend/app/contexts/: PokerContext.tsx
frontend/app/services/: api.ts
frontend/app/tests/: poker.test.ts
frontend/app/tests/e2e/: poker.test.ts
frontend/app/utils/: poker.ts
